class=tariff
